Implementation of MLOPs in the framework and reports
